<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity2"
    android:background="#e6beff"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonId9"
        android:onClick="web4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text8"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonId10"
        android:onClick="web5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text9"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonId11"
        android:onClick="web6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text10"
        android:textSize="26sp" />

    <Button
        android:id="@+id/buttonId12"
        android:onClick="web6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text11"
        android:textSize="26sp" />

    </LinearLayout>